* avoid overflow

--- a/css/frameview.css
+++ b/css/frameview.css
@@ -30,4 +30,5 @@
 .absol-frame-view-frame-container > div {
     width: 100%;
     height: 100%;
+    display: block;/* avoid overflow if this div is inline-block*/
 }
